# Aurorae-genesis

./: Cargo.toml  dockerfile  run.bat
aurorae/: alchemy.rs  autonomy.rs  blockchain_core.rs  brain.rs  clippy_integration.rs  code_evolution.rs  crawler.rs  defense.rs  deployer.rs  dream.rs  economy.rs  engine.rs  evolution.rs  explorer.rs  founder_income.rs  generator.rs  genome.rs  guardian.rs  intelligence.rs  knowledge.rs  learning.rs  lib.rs  main.rs  mutation.rs  network_builder.rs  neural_network.rs  nft_minter.rs  openai.rs  pattern_extractor.rs  refactor.rs  reinforcement_learning.rs  reproduction.rs  rust_analyzer.rs  security.rs  strategist.rs  update_checker.rs  validator.rs  vision.rs
crates/aurorae-ai/: cargo.toml
crates/aurorae-core/: cargo.toml
crates/aurorae-eth/: cargo.toml
crates/aurorae-polkadot/: cargo.toml
crates/aurorae-solana/: cargo.toml
frontend/app/: dashboard.tsx
frontend/app/api/: chains.ts  modules.ts  nfts.ts  tokens.ts
frontend/components/: mint_nft.js
output/: auroraium_erc20.json
smart_contracts/: Auroraium.sol
tests/: integration_test.rs
