[package]
name = "aurorae"
version = "0.1.0"
edition = "2021"
authors = ["TonNom <ton@email.com>"]
description = "Moteur vivant autonome AURORAE++ pour la création crypto intelligente"
license = "MIT"

[[bin]]
name = "aurorae"
path = "aurorae/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "full"] }
ethers = "2.0.14"
k256 = "0.13.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
fs_extra = "1.3"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
cargo_metadata = "0.18"
ring = "0.17"
flate2 = "1.0"
tar = "0.4"
regex = "1"

# 🧠 INTELLIGENCE STRATÉGIQUE
async-openai = "0.14" 
# 🔧 OUTILS COMPLÉMENTAIRES
regex = "1.10"
lazy_static = "1.4"
parking_lot = "0.12"
